# nginx-analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: nginx-analyzer.yml
src/: analyzer.py  main.py  models.py  parser.py
